	* Changed tx_solr_Template to tolerate if viewhelpers could not be loaded
	* Added support for named loops in tx_solr_Template
	* Added support for conditions in loops
	* Changed tx_solr_Template to accept markers in whatver notation
	* Added tx_solr_Util::lcfirst()
	* Added tx_solr_Util::getSolrConfigurationFromPageId() and tx_solr_Util::initializeTsfe()
	* Added base classes for plugins

2010-09-14  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed solrconfig.xml deactivating dataDir

2010-09-13  Ingo Renner  <ingo.renner@dkd.de>

	* Added a content extraction class for TYPO3 pages
	* Changed the indexer to use the content extractor introduced before
	* Changed SolrPhpClient library to be in sync with r38 at http://code.google.com/p/solr-php-client/
	* Added a field processor service and an actual timestamp to ISO date field processor
	* Changed the indexer to use the field processor service
	* Changed how the frontend indexer checks whether indexing is enabled
	* Changed interfaces tx_solr_AdditionalIndexer and tx_solr_SubstitutePageIndexer to accept documents currently being indexed
	* Added the Solr Access Filter Plugin
	* Changed the schema.xml introducing the new access field for use with the Solr Access Filter Plugin
	* Changed the indexer to use the new access field
	* Changed the query class to generate an access filter for the new Solr plugin
	* Changed solrconfig.xml to load the Access Filter Plugin
	* Added a status report to check whether the Solr Access Filter plugin is installed
	* Added tx_solr_NoSolrConnectionFoundException for cases when the connection manager can not find a Solr connection
	* Changed the connection manager to find connections more reliably

2010-09-10  Markus Goldbach  <markus.goldbach@dkd.de>

	* Changed install script, check if all required packages are installed, update Tomcat to 6.0.29 and rename Tomcat directory to simplify updates, credits Michel Tremblay

2010-08-30  Ingo Renner  <ingo.renner@dkd.de>
