@@ -20,7 +20,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'dependencies' => 'pagebrowse',
 	'conflicts' => '',
 	'priority' => '',
-	'module' => 'mod_admin',
+	'module' => '',
 	'state' => 'stable',
 	'internal' => '',
 	'uploadfolder' => 0,
