@@ -11,6 +11,7 @@
 	* Added tx_solr_Util::lcfirst()
 	* Added tx_solr_Util::getSolrConfigurationFromPageId() and tx_solr_Util::initializeTsfe()
 	* Added base classes for plugins
+	* Removed the backend module for now, didn't do anything anyways
 
 2010-09-14  Markus Goldbach  <markus.goldbach@dkd.de>
 
